tui/src/snapshots/codex_tui__app_server_render__tests__round_renderer_flushes_agent_stream_before_ran_vt100.snap
---
source: tui/src/app_server_render.rs
expression: terminal.backend().vt100().screen().contents()
---





› test prompt


• first message.

• Ran echo tool

────────────────────────────────────────────────────────────────────────────────

• second message.
