tui/src/snapshots/codex_tui__app_server_render__tests__round_renderer_round_banner_padding_before_status_vt100.snap
---
source: tui/src/app_server_render.rs
expression: terminal.backend().vt100().screen().contents()
---
• CodexPotter: iteration round 1/10

• Round 1/10 (0s) · Working (0s) · 100% context left


› Assign new task to CodexPotter

  project [main] · ctrl+g editor
